@@ -133,7 +133,7 @@ Integral: limit, tries, debug, delay, usegz(-1=default, 0=uncompressed, 1-9=gzip
 .br
 Float: curservmult
 .br
-Boolean(0/1): case, complete, dupeidcheck, dupefilecheck, quiet, tempshortnames(1=Use 8.3 tempfile names (for old dos partitions, etc), 0=Use 17.3 tempfile names), unequal_line_error
+Boolean(0/1): case, complete, dupeidcheck, dupefilecheck, quiet, tempshortnames(1=Use 8.3 tempfile names (for old dos partitions, etc), 0=Use 17.3 tempfile names), unequal_line_error, fullxover
 .br
 yes/no/ask: makedirs
 .br
